fix(inspector): Remove height and allow container to overflow.
We want the main container to grow to fill the rest of the screen,
not 100% height, as we also have the header taking up space.

We also want to enable overflow on app-viewer and the data view,
this way we keep our "footers" in place but allow the inner
windows to scroll.

--- a/inspector/web/components/app-root.css
+++ b/inspector/web/components/app-root.css
@@ -8,7 +8,7 @@ app-root {
 app-root main {
   flex-grow: 1;
   display: flex;
-  height: 100%;
+  overflow: auto;
 }
 
 app-root .column {
